[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://base_font.tres" type="DynamicFont" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -10.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 2 )
text = "halloooo"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="one" type="Button" parent="."]
anchor_left = 0.208
anchor_top = 1.196
anchor_right = 0.208
anchor_bottom = 1.196
margin_left = 14.6877
margin_top = -181.187
margin_right = 78.6877
margin_bottom = -161.187
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="two" type="Button" parent="."]
anchor_left = 0.208
anchor_top = 1.196
anchor_right = 0.208
anchor_bottom = 1.196
margin_left = 112.158
margin_top = -181.187
margin_right = 176.158
margin_bottom = -161.187
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="three" type="Button" parent="."]
anchor_left = 0.208
anchor_top = 1.196
anchor_right = 0.208
anchor_bottom = 1.196
margin_left = 210.688
margin_top = -181.187
margin_right = 274.688
margin_bottom = -161.187
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="one" to="." method="_on_one_pressed"]
[connection signal="pressed" from="two" to="." method="_on_two_pressed"]
[connection signal="pressed" from="three" to="." method="_on_three_pressed"]
